--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -35,8 +35,7 @@ jobs:
           github_user_name: ababdelo
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=dark&color_snake=%23304B7F&color_dots=%23A4C6E2,%237EA2C1,%235B84A1,%234D78CC,%233E464A&background=transparent
-        env:
+            dist/github-contribution-grid-snake-dark.svg?palette=dark&color_snake=%23304B7F&color_dots=%233E464A,%234D78CC,%235B84A1,%237EA2C1,%23A4C6E2&background=transparent        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: false  # Ensures workflow fails if this step fails
 
